# notes-restAPI

./: Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
migrations/: 20260326190830_create_notes_table.sql
src/: handlers.rs  main.rs  models.rs
